force-app/main/default/objects/Reference_MMS_Payroll__c/Reference_MMS_Payroll__c.object-meta.xml
<CustomObject>
    <description>Object used to store additional information for on-boarding MMS Payroll.</description>
    <label>Reference Preview Payroll</label>
    <nameField>
        <displayFormat>PRVW-{000000000}</displayFormat>
        <label>Reference MMS Payroll Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Preview Payrolls</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>