force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Active_Employees__c.field-meta.xml
<CustomField>
    <fullName>Active_Employees__c</fullName>
    <inlineHelpText>Enter the number of active employees that will be loaded.</inlineHelpText>
    <label>Active Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>