force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Assigned_Prospect_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Prospect_Client_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Prospect-Client Number when Prospect-Client Number is assigned during client load process.  Prospect-Client Number will update to Prospect-Client record for not-integrated records.</inlineHelpText>
    <label>Assigned Prospect-Client Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>