force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set value with create trigger</description>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Reference_MMS_Payrolls</relationshipName>
    <type>Lookup</type>
</CustomField>