force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Check_Printing__c.field-meta.xml
<CustomField>
    <fullName>Check_Printing__c</fullName>
    <description>Used to track MMS Payroll on boarding activity.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Printing</label>
    <type>Date</type>
</CustomField>