force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Client_Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Client_Assigned_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Assigned By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>