force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Client_Load_Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>Client_Load_Submission_Method__c</fullName>
    <description>Used on the MMS Payroll Onboarding Case in order to track the sales submitted through the Mid Market Sales Tool.</description>
    <inlineHelpText>Used to track sales submitted through the Mid Market Sales Tool.</inlineHelpText>
    <label>Client Load Submission Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mid-Market Sales Tool</fullName>
            </value>
            <value>
                <fullName>Paper Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>