force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Current_Quarter_Wages__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Wages__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Quarter Wages</label>
    <type>Date</type>
</CustomField>