force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Date_Client_Load_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Client_Load_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Client Load Received</label>
    <type>Date</type>
</CustomField>