force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Encryption_Key__c.field-meta.xml
<CustomField>
    <fullName>Encryption_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Encryption Key</label>
    <type>Date</type>
</CustomField>