force-app/main/default/objects/Reference_MMS_Payroll__c/fields/HRG__c.field-meta.xml
<CustomField>
    <fullName>HRG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HRG</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>HRG_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>