force-app/main/default/objects/Reference_MMS_Payroll__c/fields/HRO_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>HRO_Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MPSC CSS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HRO_Onboarding_User</relationshipName>
    <type>Lookup</type>
</CustomField>