force-app/main/default/objects/Reference_MMS_Payroll__c/fields/ID_Formats_Verified_and_Submitted__c.field-meta.xml
<CustomField>
    <fullName>ID_Formats_Verified_and_Submitted__c</fullName>
    <description>Used to track MMS Payroll on boarding activity.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Formats Verified and Submitted</label>
    <type>Date</type>
</CustomField>