force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Level_of_AS__c.field-meta.xml
<CustomField>
    <fullName>Level_of_AS__c</fullName>
    <label>Level of IS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implementation Specialist I</fullName>
            </value>
            <value>
                <fullName>Implementation Specialist II</fullName>
            </value>
            <value>
                <fullName>Implementation Specialist III</fullName>
            </value>
            <value>
                <fullName>Implementation Project Manager</fullName>
            </value>
            <value>
                <fullName>Sr Implementation Project Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>