force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Load_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Load_Accepted_Date__c</fullName>
    <description>MMS Payroll Onboarding: Used to track when the load was accepted</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is automatically updated with Today() when the picklist value &quot;Accepted&quot; is selected for the Load Reviewed Result</inlineHelpText>
    <label>Load Accepted Date</label>
    <type>Date</type>
</CustomField>