force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval__c</fullName>
    <label>Manager Approval</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hub Manager</fullName>
            </value>
            <value>
                <fullName>Branch Manager</fullName>
            </value>
            <value>
                <fullName>DSM</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>