force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Missing_Agency_Doc_Received__c.field-meta.xml
<CustomField>
    <fullName>Missing_Agency_Doc_Received__c</fullName>
    <description>Used to track MMS Payroll on boarding activity.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Missing Agency Doc Received</label>
    <type>Date</type>
</CustomField>