force-app/main/default/objects/Reference_MMS_Payroll__c/fields/MMS_MAM_NAM__c.field-meta.xml
<CustomField>
    <fullName>MMS_MAM_NAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MMS MAM/NAM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Reference_MMS_MAMNAM</relationshipName>
    <type>Lookup</type>
</CustomField>