force-app/main/default/objects/Reference_MMS_Payroll__c/fields/MyPaychex_com_Client__c.field-meta.xml
<CustomField>
    <fullName>MyPaychex_com_Client__c</fullName>
    <description>Used to indicate if the client is a my paychex.com client.</description>
    <inlineHelpText>Used to indicate if the client is a my paychex.com client.</inlineHelpText>
    <label>MyPaychex.com Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SSO Legacy</fullName>
            </value>
            <value>
                <fullName>SSO Legacy Admin</fullName>
            </value>
            <value>
                <fullName>One Source Solutions Portal</fullName>
            </value>
            <value>
                <fullName>One Source Solutions Portal Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>