force-app/main/default/objects/Reference_MMS_Payroll__c/fields/MyPaychex_com_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MyPaychex_com_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyPaychex.com Start Date</label>
    <type>Date</type>
</CustomField>