force-app/main/default/objects/Reference_MMS_Payroll__c/fields/New_Business_Indicator__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Indicator__c</fullName>
    <label>New Business Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>