force-app/main/default/objects/Reference_MMS_Payroll__c/fields/New_Load_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Load_Audit_Date__c</fullName>
    <description>MMS Payroll Onboarding: Internal Audit procedure to have an additional resource veriftying the accuracy of the load.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Load Audit Date</label>
    <type>Date</type>
</CustomField>