force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set with create trigger</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Reference_MMS_Payrolls</relationshipName>
    <type>Lookup</type>
</CustomField>