force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Other_Interface__c.field-meta.xml
<CustomField>
    <fullName>Other_Interface__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Interface</label>
    <type>Date</type>
</CustomField>