force-app/main/default/objects/Reference_MMS_Payroll__c/fields/POA_s_Submitted__c.field-meta.xml
<CustomField>
    <fullName>POA_s_Submitted__c</fullName>
    <description>Used to track MMS Payroll on boarding activity.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>POA&apos;s Submitted</label>
    <type>Date</type>
</CustomField>