force-app/main/default/objects/Reference_MMS_Payroll__c/fields/POP_Summary_Checked_In__c.field-meta.xml
<CustomField>
    <fullName>POP_Summary_Checked_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator POP Summary document has been checked in</description>
    <label>POP Summary Checked In</label>
    <type>Checkbox</type>
</CustomField>