force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Prior_Quarter_Balanced__c.field-meta.xml
<CustomField>
    <fullName>Prior_Quarter_Balanced__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Quarter Balanced</label>
    <type>Date</type>
</CustomField>