force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Summary</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>