force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Reason_for_Preview_Verified__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Preview_Verified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Preview Verified</label>
    <type>Date</type>
</CustomField>