force-app/main/default/objects/Reference_MMS_Payroll__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set with create trigger</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reference_MMS_Payrolls</relationshipName>
    <type>Lookup</type>
</CustomField>