force-app/main/default/objects/Reference_MMS_Payroll__c/fields/SigFont_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>SigFont_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SigFont Received Date</label>
    <type>Date</type>
</CustomField>