force-app/main/default/objects/Reference_MMS_Payroll__c/recordTypes/Reference_Onboarding_MMS_Payroll.recordType-meta.xml
<RecordType>
    <fullName>Reference_Onboarding_MMS_Payroll</fullName>
    <active>true</active>
    <description>Record Type for MMS Payroll reference record</description>
    <label>Reference Onboarding MMS Payroll</label>
</RecordType>