force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Actual_Run_Date_not_Greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Run_Date_not_Greater_than_today</fullName>
    <active>true</active>
    <description>Actual Run Date can not be a future date, can not be greater than today</description>
    <errorConditionFormula>Actual_Run_Date__c  &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Actual_Run_Date__c</errorDisplayField>
    <errorMessage>**** Actual Run Date can not be a future date, can not be greater than today ****</errorMessage>
</ValidationRule>