force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Adv_Training_GL_completed_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Adv_Training_GL_completed_and_NA</fullName>
    <active>true</active>
    <description>Advance Training GL populated and Advance Training GL included in the Not Applicable: Installation and Traniing picklist</description>
    <errorConditionFormula>NOT(ISNULL(Advanced_Training_GL__c)) &amp;&amp; INCLUDES( Not_Applicable_Installation_and_Training__c, &quot;Advanced Training - GL&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Installation_and_Training__c</errorDisplayField>
    <errorMessage>**** Advance Training GL cannot be populated and included in the Not Applicable: Installation and Traniing picklist ****</errorMessage>
</ValidationRule>