force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Adv_Training_RA_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Adv_Training_RA_complete_and_NA</fullName>
    <active>true</active>
    <description>Advanced Training RW populated and Advanced Training RW included in the Not Applicable: Installation and Traniing picklist</description>
    <errorConditionFormula>NOT(ISNULL(Advanced_Training_RW__c)) &amp;&amp; INCLUDES( Not_Applicable_Installation_and_Training__c, &quot;Advanced Training - RW&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Installation_and_Training__c</errorDisplayField>
    <errorMessage>**** Advanced Training RW cannot be populated and included in the Not Applicable: Installation and Traniing picklist ****</errorMessage>
</ValidationRule>