force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Advanced_Training_HR_Module_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Advanced_Training_HR_Module_and_NA</fullName>
    <active>true</active>
    <description>Advanced Training HR Module  is populated and  Advanced Training HR Module  is in the Not Applicable: Installation and Traniing picklist</description>
    <errorConditionFormula>NOT(ISNULL(Advanced_Training_HR_Module__c)) &amp;&amp; INCLUDES( Not_Applicable_Installation_and_Training__c, &quot;Advanced Training - HR Module&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Installation_and_Training__c</errorDisplayField>
    <errorMessage>**** Advanced Training HR Module cannot be populated and included in the Not Applicable: Installation and Traniing picklist ****</errorMessage>
</ValidationRule>