force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Agency_Checks_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Agency_Checks_complete_and_NA</fullName>
    <active>true</active>
    <description>Agency Checks populated and Agency Checks included in the Not Applicable: Company Shell/EE Static picklist</description>
    <errorConditionFormula>NOT(ISNULL(Agency_Checks__c)) &amp;&amp; INCLUDES(Not_Applicable_Company_Shell__c, &quot;Agency Checks&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Company_Shell__c</errorDisplayField>
    <errorMessage>**** Agency Checks cannot be populated and included in the Not Applicable: Company Shell/EE Static picklist ****</errorMessage>
</ValidationRule>