force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Assigned_Prospect_Client_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_Prospect_Client_Number_Format</fullName>
    <active>true</active>
    <description>Enforces the 4##-### formatting for Assigned Prospect-Client Number</description>
    <errorConditionFormula>NOT(ISBLANK(Assigned_Prospect_Client_Number__c))  &amp;&amp; 
NOT(REGEX(Assigned_Prospect_Client_Number__c, &quot;4[0-9]{2}-[a-zA-Z_0-9]{4}&quot;))</errorConditionFormula>
    <errorDisplayField>Assigned_Prospect_Client_Number__c</errorDisplayField>
    <errorMessage>**** Format s/b location-client number, no leading zeroes 
example: 402-6789 ******</errorMessage>
</ValidationRule>