force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Benetrac_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Benetrac_complete_and_NA</fullName>
    <active>true</active>
    <description>Benetrac populated and Benetrac included in the Not Applicable: Installation and Traniing picklist</description>
    <errorConditionFormula>Benetrac__c &amp;&amp; INCLUDES( Not_Applicable_Interfaces_Set_up__c, &quot;Benetrac&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Interfaces_Set_up__c</errorDisplayField>
    <errorMessage>**** Benetrac cannot be populated and included in the Not Applicable: Installation and Traniing picklist ****</errorMessage>
</ValidationRule>