force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Code_1099_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Code_1099_complete_and_NA</fullName>
    <active>true</active>
    <description>Code 1099&apos;s populated and  included in the Not Applicable: Company Shell/EE Static picklist</description>
    <errorConditionFormula>NOT(ISNULL(Code_1099_s__c)) &amp;&amp; INCLUDES(Not_Applicable_Company_Shell__c, &quot;Code 1099&apos;s&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Company_Shell__c</errorDisplayField>
    <errorMessage>**** Code 1099&apos;s cannot be populated and included in the Not Applicable: Company Shell/EE Static picklist *****</errorMessage>
</ValidationRule>