force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Company_Flags_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Flags_complete_and_NA</fullName>
    <active>true</active>
    <description>Company Flags populated and Company Flags included in the Not Applicable: Company Shell/EE Static picklist</description>
    <errorConditionFormula>NOT(ISNULL(Company_Flags__c)) &amp;&amp; INCLUDES(Not_Applicable_Company_Shell__c, &quot;Company Flags&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Company_Shell__c</errorDisplayField>
    <errorMessage>**** Company Flags cannot be populated and included in the Not Applicable: Company Shell/EE Static picklist ****</errorMessage>
</ValidationRule>