force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Conversion_Target_Date_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Conversion_Target_Date_complete_and_NA</fullName>
    <active>true</active>
    <description>Conversion Target Date populated and Conversion Target Date included in the Not Applicable: Company Shell/EE Static picklist</description>
    <errorConditionFormula>NOT(ISNULL(Conversion_Target_Date__c)) &amp;&amp; INCLUDES(Not_Applicable_Company_Shell__c, &quot;Conversion Target Date&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Company_Shell__c</errorDisplayField>
    <errorMessage>**** Conversion Target Date cannot be populated and included in the Not Applicable: Company Shell/EE Static picklist ****</errorMessage>
</ValidationRule>