force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Crt_Qtr_Bal_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Crt_Qtr_Bal_complete_and_NA</fullName>
    <active>true</active>
    <description>Current Quarter Balanced populated and Current Quarter Balanced included in the Not Applicable: Tax, Wage and Balance picklist</description>
    <errorConditionFormula>NOT(ISNULL(Current_Quarter_Balanced__c)) &amp;&amp; INCLUDES( Not_Applicable_Tax_Wage_and_Balance__c , &quot;Current Quarter Balanced&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Tax_Wage_and_Balance__c</errorDisplayField>
    <errorMessage>**** Current Quarter Balanced cannot be populated and included in the Not Applicable: Tax, Wage and Balance picklist ****</errorMessage>
</ValidationRule>