force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Custom_Reports_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Reports_complete_and_NA</fullName>
    <active>true</active>
    <description>Custom Reports populated and Custom Reports included in the Not Applicable: Installation and Traniing picklist</description>
    <errorConditionFormula>NOT(ISNULL(Custom_Reports__c)) &amp;&amp; INCLUDES( Not_Applicable_Interfaces_Set_up__c, &quot;Custom Reports&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Interfaces_Set_up__c</errorDisplayField>
    <errorMessage>**** Custom Reports cannot be populated and included in the Not Applicable: Installation and Traniing picklist ****</errorMessage>
</ValidationRule>