force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Direct_Deposits_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Direct_Deposits_complete_and_NA</fullName>
    <active>true</active>
    <description>Direct Deposits populated and Direct Deposits included in the Not Applicable: Company Shell/EE Static picklist</description>
    <errorConditionFormula>NOT(ISNULL(Direct_Deposits__c)) &amp;&amp; INCLUDES(Not_Applicable_Company_Shell__c, &quot;Direct Deposits&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Company_Shell__c</errorDisplayField>
    <errorMessage>**** Direct Deposits cannot be populated and included in the Not Applicable: Company Shell/EE Static picklist ****</errorMessage>
</ValidationRule>