force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Earning_Code_Sets_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Earning_Code_Sets_complete_and_NA</fullName>
    <active>true</active>
    <description>Earning Code Sets populated and Earning Code Sets included in the Not Applicable: Company Shell/EE Static picklist</description>
    <errorConditionFormula>NOT(ISNULL(Earning_Code_Sets__c)) &amp;&amp; INCLUDES(Not_Applicable_Company_Shell__c, &quot;Earning Code Sets&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Company_Shell__c</errorDisplayField>
    <errorMessage>**** Earning Code Sets cannot be populated and included in the Not Applicable: Company Shell/EE Static picklist ****</errorMessage>
</ValidationRule>