force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Encrytion_Key_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Encrytion_Key_complete_and_NA</fullName>
    <active>true</active>
    <description>Encrytion Key populated and Encrytion Key included in the Not Applicable: Installation and Traniing picklist</description>
    <errorConditionFormula>NOT(ISNULL(Encryption_Key__c)) &amp;&amp; INCLUDES( Not_Applicable_Installation_and_Training__c, &quot;Encryption Key&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Installation_and_Training__c</errorDisplayField>
    <errorMessage>**** Encrytion Key cannot be populated and included in the Not Applicable: Installation and Traniing picklist ****</errorMessage>
</ValidationRule>