force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Expense_Manager_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Manager_complete_and_NA</fullName>
    <active>true</active>
    <description>Expense Manager populated and Expense Manager included in the Not Applicable: Installation and Traniing picklist</description>
    <errorConditionFormula>NOT(ISNULL(Expense_Manager__c)) &amp;&amp; INCLUDES( Not_Applicable_Interfaces_Set_up__c, &quot;Expense Manager&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Interfaces_Set_up__c</errorDisplayField>
    <errorMessage>**** Expense Manager cannot be populated and included in the Not Applicable: Installation and Traniing picklist ****</errorMessage>
</ValidationRule>