force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Extra_Fields_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Extra_Fields_complete_and_NA</fullName>
    <active>true</active>
    <description>Extra Fields populated and Extra Fields included in the Not Applicable: Company Shell/EE Static picklist</description>
    <errorConditionFormula>NOT(ISNULL(Extra_Fields__c)) &amp;&amp; INCLUDES(Not_Applicable_Company_Shell__c, &quot;Extra Fields&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Company_Shell__c</errorDisplayField>
    <errorMessage>**** Extra Fields cannot be populated and included in the Not Applicable: Company Shell/EE Static picklist ****</errorMessage>
</ValidationRule>