force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/GL_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>GL_complete_and_NA</fullName>
    <active>true</active>
    <description>GL populated and GL included in the Not Applicable: Company Shell/EE Static picklist</description>
    <errorConditionFormula>NOT(ISNULL(GL__c)) &amp;&amp; INCLUDES(Not_Applicable_Company_Shell__c, &quot;GL&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Company_Shell__c</errorDisplayField>
    <errorMessage>**** GL cannot be populated and included in the Not Applicable: Company Shell/EE Static picklist ****</errorMessage>
</ValidationRule>