force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/GL_Interface_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>GL_Interface_complete_and_NA</fullName>
    <active>true</active>
    <description>GL Interface populated and GL Interface included in the Not Applicable: Installation and Traniing picklist</description>
    <errorConditionFormula>NOT(ISNULL(GL_Interface__c)) &amp;&amp; INCLUDES( Not_Applicable_Interfaces_Set_up__c, &quot;GL Interface&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Interfaces_Set_up__c</errorDisplayField>
    <errorMessage>**** GL Interface cannot be populated and included in the Not Applicable: Installation and Traniing picklist ****</errorMessage>
</ValidationRule>