force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/IFT_setup_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>IFT_setup_complete_and_NA</fullName>
    <active>true</active>
    <description>IFT set-up is populated and IFT Set up is in the Not Applicable: Installation and Traniing picklist</description>
    <errorConditionFormula>NOT(ISNULL(IFT_Set_up__c)) &amp;&amp; INCLUDES( Not_Applicable_Installation_and_Training__c, &quot;IFT Set up&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Installation_and_Training__c</errorDisplayField>
    <errorMessage>**** IFT Set up cannot be populated and included in the Not Applicable: Installation and Traniing picklist ****</errorMessage>
</ValidationRule>