force-app/main/default/objects/Reference_MMS_Payroll__c/validationRules/Input_Worksheet_complete_and_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Input_Worksheet_complete_and_NA</fullName>
    <active>true</active>
    <description>Input Worksheet populated and Input Worksheet included in the Not Applicable: Company Shell/EE Static picklist</description>
    <errorConditionFormula>NOT(ISNULL(Input_Worksheet__c)) &amp;&amp; INCLUDES(Not_Applicable_Company_Shell__c, &quot;Input Worksheet&quot;)</errorConditionFormula>
    <errorDisplayField>Not_Applicable_Company_Shell__c</errorDisplayField>
    <errorMessage>**** Input Worksheet cannot be populated and included in the Not Applicable: Company Shell/EE Static picklist ****</errorMessage>
</ValidationRule>